--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
@@ -17,7 +18,7 @@
 
 
     <footer>
-        
+
     </footer>
 </body>
 </html>
